service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-svc
  labels:
    name: spring-boot-k8s-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-k8s
